--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -24,11 +24,16 @@
       gap: 25%;
       width: 50%;
 
-      &-close{
+      &-close {
         background-image: url(../images/icons/close.svg);
         height: 24px;
         width: 24px;
         display: block;
+        transition-duration: 300ms;
+      }
+
+      &-close:hover {
+        box-shadow: 0 0 4px 1px $c-gray;
       }
 
       &-nav {
@@ -46,6 +51,11 @@
           font-weight: 500;
           margin: 0;
           line-height: 100%;
+          transition-duration: 300ms;
+        }
+
+        &-text:hover {
+          box-shadow: 0 0 4px 1px $c-gray;
         }
       }
     }
@@ -151,6 +161,11 @@
           height: 24px;
           width: 24px;
           display: block;
+          transition-duration: 300ms;
+        }
+
+        &-close:hover {
+          box-shadow: 0 0 4px 1px $c-gray;
         }
 
         &-nav {
@@ -166,6 +181,10 @@
             font-weight: 500;
             margin: 0;
             line-height: 100%;
+            transition-duration: 300ms;
+          }
+          &-text:hover {
+            box-shadow: 0 0 4px 1px $c-gray;
           }
         }
       }
@@ -270,6 +289,11 @@
           height: 24px;
           width: 24px;
           display: block;
+          transition-duration: 300ms;
+        }
+
+        &-close:hover {
+          box-shadow: 0 0 4px 1px $c-gray;
         }
 
         &-nav {
@@ -285,6 +309,11 @@
             font-weight: 500;
             margin: 0;
             line-height: 100%;
+            transition-duration: 300ms;
+          }
+
+          &-text:hover {
+            box-shadow: 0 0 4px 1px $c-gray;
           }
         }
       }
