--- a/src/styles/blocks/body-main.scss
+++ b/src/styles/blocks/body-main.scss
@@ -5,6 +5,7 @@
 
 .image:hover {
   transform: scale(1.07);
+  cursor: pointer;
 }
 
 @include on-desktop {
@@ -125,13 +126,14 @@
 
     &__wrapper{
       text-decoration: none;
+      position: relative;
+      top: 60vh;
+      height: 204px;
       &-block  {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        position: relative;
         background-color: $c-gray;
-        top: 60vh;
         box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
         width: 570px;
         height: 204px;
@@ -292,6 +294,11 @@
             padding-inline: 32px;
             font-weight: 400;
             box-sizing: border-box;
+            transition-duration: 300ms;
+          }
+
+          &-input:hover {
+            box-shadow: 0 0 4px 1px $c-gray;
           }
 
           &-input::placeholder {
@@ -310,6 +317,7 @@
           padding: 0;
           margin: 0;
           background-color: #f14a27;
+          transition-duration: 300ms;
 
           &-placeholder {
             width: 24px;
@@ -321,6 +329,7 @@
 
         &-button:hover {
           cursor: pointer;
+          box-shadow: 0 0 4px 1px $c-gray;
         }
       }
     }
@@ -449,13 +458,14 @@
 
     &__wrapper{
       text-decoration: none;
+      top: 33vh;
+      position: relative;
+      height: 204px;
       &-block  {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        position: relative;
         background-color: $c-gray;
-        top: 33vh;
         box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
         width: 570px;
         height: 204px;
@@ -495,7 +505,6 @@
   }
 
   .gallery {
-    margin-left: 34px;
     margin-top: 205px;
     padding-bottom: 92px;
     display: flex;
@@ -511,12 +520,15 @@
         font-size: 48px;
         font-style: normal;
         font-weight: 700;
+        padding-left: 34px;
+        margin-bottom: 0;
       }
 
       &-paintings {
         display: flex;
         gap: 30px;
         overflow: hidden;
+        padding: 40px 0 34px 34px;
 
         &-wrapper1 {
           display: flex;
@@ -540,8 +552,8 @@
       display: flex;
       justify-content: center;
       height: 10px;
-      margin-top: 34px;
       gap: 22px;
+      padding-left: 34px;
 
       &-link  {
         display: inline-block;
@@ -551,6 +563,11 @@
         &-pic {
           height: 9px;
           width: 9px;
+          transition-duration: 300ms;
+        }
+
+        &-pic:hover {
+          box-shadow: 0 0 4px 1px $green-color;
         }
       }
     }
@@ -601,6 +618,7 @@
         grid-template-columns: 374px 16px 50px;
 
         &-form {
+          margin-left: 20px;
 
           &-input {
             display: inline-block;
@@ -614,6 +632,11 @@
             font-weight: 400;
             font-family: Montserrat, sans-serif;
             box-sizing: border-box;
+            transition-duration: 300ms;
+          }
+
+          &-input:hover {
+            box-shadow: 0 0 4px 1px $c-gray;
           }
 
           &-input::placeholder {
@@ -632,6 +655,7 @@
           padding: 0;
           margin: 0;
           background-color: #f14a27;
+          transition-duration: 300ms;
 
           &-placeholder {
             width: 24px;
@@ -643,6 +667,7 @@
 
         &-button:hover {
           cursor: pointer;
+          box-shadow: 0 0 4px 1px $green-color;
         }
       }
     }
@@ -775,13 +800,14 @@
 
     &__wrapper{
       text-decoration: none;
+      position: relative;
+      top: 17vh;
+      height: 140px;
       &-block  {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        position: relative;
         background-color: $c-gray;
-        top: 17vh;
         box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
         width: 280px;
         height: 140px;
@@ -821,7 +847,6 @@
   }
 
   .gallery {
-    margin-left: 20px;
     margin-top: 183px;
     display: flex;
     justify-content: center;
@@ -830,20 +855,21 @@
 
     &__cover {
       width: 100%;
+      overflow: hidden;
       &-header {
         color: $header-text-color;
         font-family: Montserrat, sans-serif;
         font-size: 36px;
         font-style: normal;
         text-align: center;
-        margin-top: 0;
         font-weight: 700;
+        margin: 0;
       }
 
       &-paintings {
         display: flex;
         gap: 16px;
-        overflow: hidden;
+        padding: 30px 0  34px 20px;
 
         &-wrapper1 {
           display: flex;
@@ -852,6 +878,10 @@
           &-goose {
             width: 270px;
             padding-right: 20px;
+          }
+
+          &-goose {
+            overflow: hidden;
           }
 
           &-painting2 {
@@ -869,7 +899,6 @@
       display: flex;
       justify-content: center;
       height: 10px;
-      margin-top: 34px;
       gap: 22px;
 
       &-link  {
@@ -880,6 +909,11 @@
         &-pic {
           height: 9px;
           width: 9px;
+          transition-duration: 300ms;
+        }
+
+        &-pic:hover {
+          box-shadow: 0 0 4px 1px $green-color;
         }
       }
     }
@@ -948,6 +982,11 @@
             padding-inline: 32px;
             font-weight: 400;
             box-sizing: border-box;
+            transition-duration: 300ms;
+          }
+
+          &-imput:hover {
+            box-shadow: 0 0 4px 1px $green-color;
           }
 
           &-input::placeholder {
@@ -966,6 +1005,7 @@
           padding: 0;
           margin: 0;
           background-color: #f14a27;
+          transition-duration: 300ms;
 
           &-placeholder {
             width: 24px;
@@ -977,6 +1017,7 @@
 
         &-button:hover {
           cursor: pointer;
+          box-shadow: 0 0 4px 1px $green-color;
         }
       }
     }
