--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -14,6 +14,7 @@
     &__icons {
       display: flex;
       flex-direction: column;
+      transition-duration: 300ms;
 
       &-link {
         text-decoration: none;
@@ -40,8 +41,8 @@
           display: inline-block;
 
           &-logo  {
-            width: 34px;
-            height: 34px;
+            width: 24px;
+            height: 24px;
           }
         }
       }
@@ -64,6 +65,7 @@
         color: $header-text-color;
         font-weight: 600;
         line-height: 150%;
+        margin: 0;
 
         &-light {
           font-weight: 400;
@@ -89,16 +91,20 @@
       &-header  {
         line-height: 140.63%;
         margin-top: 0;
-        margin-bottom: 34px;
+        margin-bottom: 20px;
       }
 
       &-data {
         &-link {
-          padding-bottom: 15px;
           display: inline-block;
           text-decoration: none;
           color: $header-text-color;
           line-height: 150%;
+          transition-duration: 300ms;
+        }
+
+        &-link:hover {
+          box-shadow: 0 0 4px 1px $green-color;
         }
       }
 
@@ -124,6 +130,11 @@
       &-text {
         text-decoration: none;
         color: $header-text-color;
+        transition-duration: 300ms;
+      }
+
+      &-text:hover {
+        box-shadow: 0 0 4px 1px $green-color;
       }
     }
   }
@@ -205,6 +216,7 @@
         color: $header-text-color;
         font-weight: 600;
         line-height: 150%;
+        margin: 0;
 
         &-light {
           font-weight: 400;
@@ -235,7 +247,7 @@
       }
 
       &-data {
-        &-link {padding-bottom: 15px;
+        &-link {
           display: inline-block;
           text-decoration: none;
           color: $header-text-color;
@@ -353,6 +365,7 @@
         color: $header-text-color;
         font-weight: 600;
         line-height: 150%;
+        margin: 0;
 
         &-light {
           font-weight: 400;
@@ -384,7 +397,7 @@
       }
 
       &-data {
-        &-link {padding-bottom: 15px;
+        &-link {
           display: inline-block;
           text-decoration: none;
           color: $header-text-color;
@@ -405,6 +418,11 @@
         position: relative;
         bottom: -120px;
         left: 80px;
+        transition-duration: 300ms;
+      }
+
+      &-arrow:hover {
+        box-shadow: 0 0 4px 1px $green-color;
       }
     }
 
@@ -432,3 +450,4 @@
     }
   }
 }
+
