--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -19,6 +19,11 @@
         width: 24px;
         background-size: cover;
         margin-top: 39px;
+        transition-duration: 300ms;
+      }
+
+      &-link:hover {
+        box-shadow: 0 0  4px 1px $green-color;
       }
 
       &-text {
@@ -83,6 +88,7 @@
             display: flex;
             justify-content: center;
             text-decoration: none;
+            transition: box-shadow 300ms;
 
             &-text {
               text-align: center;
@@ -105,6 +111,10 @@
             }
           }
 
+          &-link:hover {
+            box-shadow: 0 0 4px 1px $green-color;
+          }
+
         }
       }
     }
@@ -116,7 +126,9 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-position-y: -100px;
-      &--text {
+      &-text {
+        display: inline-block;
+        text-decoration: none;
         font-family: Montserrat, sans-serif;
         font-size: 36px;
         font-weight: 700;
@@ -148,6 +160,11 @@
         width: 24px;
         background-size: cover;
         margin-top: 39px;
+        transition-duration: 300ms;
+      }
+
+      &-link:hover {
+        box-shadow: 0 0 4px 1px $green-color;
       }
 
       &-text {
@@ -210,6 +227,7 @@
             display: flex;
             justify-content: center;
             text-decoration: none;
+            transition-duration: 300ms;
 
             &-text {
               text-align: center;
@@ -232,6 +250,9 @@
             }
           }
 
+          &-link:hover {
+            box-shadow: 0 0 4px 1px $green-color;
+          }
         }
       }
     }
@@ -245,7 +266,9 @@
       background-size: 100vh;
       background-position-y: -200px;
       background-position-x: -100px;
-      &--text {
+      &-text {
+        display: inline-block;
+        text-decoration: none;
         font-family: Montserrat, sans-serif;
         font-size: 36px;
         font-weight: 700;
@@ -293,6 +316,7 @@
         margin-bottom: 20px;
         position: relative;
         margin-top: 0;
+        display: inline-block;
       }
 
       &-bottom {
@@ -349,7 +373,10 @@
       background-size: 128% 100%;
       background-repeat: no-repeat;
       background-position-x: -75px;
-      &--text {
+      &-text {
+        width: 100%;
+        display: inline-block;
+        text-decoration: none;
         font-family: Montserrat, sans-serif;
         font-size: 36px;
         font-weight: 700;
