--- a/src/styles/blocks/body-main.scss
+++ b/src/styles/blocks/body-main.scss
@@ -1,6 +1,6 @@
 .image {
   transition: all;
-  transition-duration: 300ms;
+  transition-duration: $transition-duration;
 }
 
 .image:hover {
@@ -294,7 +294,7 @@
             padding-inline: 32px;
             font-weight: 400;
             box-sizing: border-box;
-            transition-duration: 300ms;
+            transition-duration: $transition-duration;
           }
 
           &-input:hover {
@@ -317,7 +317,7 @@
           padding: 0;
           margin: 0;
           background-color: #f14a27;
-          transition-duration: 300ms;
+          transition-duration: $transition-duration;
 
           &-placeholder {
             width: 24px;
@@ -563,7 +563,7 @@
         &-pic {
           height: 9px;
           width: 9px;
-          transition-duration: 300ms;
+          transition-duration: $transition-duration;
         }
 
         &-pic:hover {
@@ -616,6 +616,7 @@
         height: 70px;
         display: grid;
         grid-template-columns: 374px 16px 50px;
+        justify-content: center;
 
         &-form {
           margin-left: 20px;
@@ -632,7 +633,7 @@
             font-weight: 400;
             font-family: Montserrat, sans-serif;
             box-sizing: border-box;
-            transition-duration: 300ms;
+            transition-duration: $transition-duration;
           }
 
           &-input:hover {
@@ -655,7 +656,7 @@
           padding: 0;
           margin: 0;
           background-color: #f14a27;
-          transition-duration: 300ms;
+          transition-duration: $transition-duration;
 
           &-placeholder {
             width: 24px;
@@ -697,8 +698,8 @@
     &__block {
       display: grid;
       row-gap: 16px;
-      grid-template-columns: 280px;
-      grid-template-rows: 330px 238px 216px 262px;
+      grid-template-rows: repeat(4, auto);
+      grid-template-columns: 100%;
       justify-content: center;
 
 
@@ -715,12 +716,12 @@
         }
 
         &-painting{
-          width: 280px;
+          width: 100%;
         }
       }
 
       &-painting{
-        width: 280px;
+        width: 100%;
       }
 
       &-description{
@@ -909,7 +910,7 @@
         &-pic {
           height: 9px;
           width: 9px;
-          transition-duration: 300ms;
+          transition-duration: $transition-duration;
         }
 
         &-pic:hover {
@@ -982,7 +983,7 @@
             padding-inline: 32px;
             font-weight: 400;
             box-sizing: border-box;
-            transition-duration: 300ms;
+            transition-duration: $transition-duration;
           }
 
           &-imput:hover {
@@ -1005,7 +1006,7 @@
           padding: 0;
           margin: 0;
           background-color: #f14a27;
-          transition-duration: 300ms;
+          transition-duration: $transition-duration;
 
           &-placeholder {
             width: 24px;
