--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -14,7 +14,7 @@
     &__icons {
       display: flex;
       flex-direction: column;
-      transition-duration: 300ms;
+      transition-duration: $transition-duration;
 
       &-link {
         text-decoration: none;
@@ -34,7 +34,8 @@
         margin-top: 62px;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
+        gap: 22px;
 
         &-link {
           text-decoration: none;
@@ -100,7 +101,7 @@
           text-decoration: none;
           color: $header-text-color;
           line-height: 150%;
-          transition-duration: 300ms;
+          transition-duration: $transition-duration;
         }
 
         &-link:hover {
@@ -125,12 +126,12 @@
       display: grid;
       grid-template-columns:  50% 50%;
       grid-template-rows: 30px 30px ;
-      gap: 30px;
+      gap: 20px;
 
       &-text {
         text-decoration: none;
         color: $header-text-color;
-        transition-duration: 300ms;
+        transition-duration: $transition-duration;
       }
 
       &-text:hover {
@@ -384,7 +385,6 @@
     }
 
     &__contacts {
-      width: 130px;
       grid-column: -2 / -1;
       display: flex;
       flex-direction: column;
@@ -397,6 +397,7 @@
       }
 
       &-data {
+        width: 130px;
         &-link {
           display: inline-block;
           text-decoration: none;
@@ -417,8 +418,8 @@
         border: 1px solid $green-color;
         position: relative;
         bottom: -120px;
-        left: 80px;
-        transition-duration: 300ms;
+        right: -60%;
+        transition-duration: $transition-duration;
       }
 
       &-arrow:hover {
