--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -4,7 +4,7 @@
     position: absolute;
     top: -300px;
     transition: top;
-    transition-duration: 300ms;
+    transition-duration: $transition-duration;
     width: 100%;
 
 
@@ -29,7 +29,7 @@
         height: 24px;
         width: 24px;
         display: block;
-        transition-duration: 300ms;
+        transition-duration: $transition-duration;
       }
 
       &-close:hover {
@@ -51,7 +51,7 @@
           font-weight: 500;
           margin: 0;
           line-height: 100%;
-          transition-duration: 300ms;
+          transition-duration: $transition-duration;
         }
 
         &-text:hover {
@@ -120,7 +120,9 @@
   }
 }
   .aside:target {
+    z-index: 2;
     opacity: 1;
+    position: fixed;
     top: 0;
   }
 
@@ -135,9 +137,10 @@
     position: absolute;
     top: -300px;
     transition: top;
-    transition-duration: 300ms;
+    transition-duration: $transition-duration;
     width: 100%;
     height: 225px;
+    overflow: hidden;
 
     &__menu {
       font-family: 'IBM Plex Sans', sans-serif;
@@ -147,7 +150,7 @@
       height: 225px;
       background-color: $green-color;
       transition: top;
-      transition-duration: 300ms;
+      transition-duration: $transition-duration;
       padding: 39px 34px;
 
       &-first {
@@ -161,7 +164,7 @@
           height: 24px;
           width: 24px;
           display: block;
-          transition-duration: 300ms;
+          transition-duration: $transition-duration;
         }
 
         &-close:hover {
@@ -181,7 +184,7 @@
             font-weight: 500;
             margin: 0;
             line-height: 100%;
-            transition-duration: 300ms;
+            transition-duration: $transition-duration;
           }
           &-text:hover {
             box-shadow: 0 0 4px 1px $c-gray;
@@ -250,7 +253,9 @@
   }
   .aside:target {
     opacity: 1;
+    position: fixed;
     top: 0;
+    z-index: 2;
   }
 
   .aside:target .aside__quit {
@@ -264,7 +269,7 @@
     position: absolute;
     top: -500px;
     transition: top;
-    transition-duration: 300ms;
+    transition-duration: $transition-duration;
     width: 100%;
 
     &__menu {
@@ -276,7 +281,7 @@
       gap: 24px;
       background-color: $green-color;
       transition: top;
-      transition-duration: 300ms;
+      transition-duration: $transition-duration;
       padding: 27px 20px;
 
       &-first {
@@ -289,7 +294,7 @@
           height: 24px;
           width: 24px;
           display: block;
-          transition-duration: 300ms;
+          transition-duration: $transition-duration;
         }
 
         &-close:hover {
@@ -309,7 +314,7 @@
             font-weight: 500;
             margin: 0;
             line-height: 100%;
-            transition-duration: 300ms;
+            transition-duration: $transition-duration;
           }
 
           &-text:hover {
@@ -381,7 +386,9 @@
     }
   }
   .aside:target {
+    z-index: 2;
     opacity: 1;
+    position: fixed;
     top: 0;
   }
 
