--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -19,7 +19,7 @@
         width: 24px;
         background-size: cover;
         margin-top: 39px;
-        transition-duration: 300ms;
+        transition-duration: $transition-duration;
       }
 
       &-link:hover {
@@ -88,7 +88,7 @@
             display: flex;
             justify-content: center;
             text-decoration: none;
-            transition: box-shadow 300ms;
+            transition: box-shadow $transition-duration;
 
             &-text {
               text-align: center;
@@ -160,7 +160,7 @@
         width: 24px;
         background-size: cover;
         margin-top: 39px;
-        transition-duration: 300ms;
+        transition-duration: $transition-duration;
       }
 
       &-link:hover {
@@ -227,7 +227,7 @@
             display: flex;
             justify-content: center;
             text-decoration: none;
-            transition-duration: 300ms;
+            transition-duration: $transition-duration;
 
             &-text {
               text-align: center;
