--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,904 +3,14 @@
 @import "./utils/mixins";
 @import "./utils/grid";
 
-.page {
-  font-family: "Montserrat", sans-serif;
-
-  &__body {
-    scroll-behavior: smooth;
-    background-color: $white;
-    min-width: 320px;
-
-    &:has(.header__menu-page:target) {
-      overflow: hidden;
-    }
-  }
-}
-
-h1 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 45px;
-  font-weight: 700;
-  line-height: 100%;
-
-  @include onTablet {
-    font-size: 54px;
-    line-height: 120%;
-  }
-}
-
-h2 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 100%;
-
-  @include onTablet {
-    font-size: 48px;
-  }
-}
-
-h3 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 28px;
-  font-weight: 400;
-  line-height: 100%;
-
-  @include onTablet {
-    font-size: 36px;
-  }
-}
-
-.container {
-  padding: 0 20px;
-  max-width: 1170px;
-  margin: 0 auto;
-
-  @include onTablet {
-    padding: 0 34px;
-  }
-
-  @include onDesktop {
-    padding: 0 55px;
-  }
-}
-
-.icon {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.menu__icon {
-  height: 24px;
-  width: 24px;
-  background-image: url("../images/icons/menu-button__open.svg");
-  
-  @include hover(transform, rotate(90deg));
-}
-
-.logo__icon {
-  width: 55px;
-  height: 61px;
-  background-image: url("../images/icons/NA-MU__logo.svg");
-
-  @include hover(transform, scale(110%));
-
-  @include onTablet {
-    width: 72px;
-    height: 72px;
-  }
-}
-
-.header {
-  margin-bottom: 230px;
-  padding-top: 10px;
-  height: 300px;
-  background-image: url("../images/header/main-poster.png");
-  background-repeat: no-repeat;
-  background-position: right;
-
-  @include onTablet {
-    margin-bottom: 88px;
-    padding-top: 15px;
-    height: 384px;
-    background-size: 50% 384px;
-  }
-
-  @include onDesktop {
-    margin-bottom: 200px;
-    height: 655px;
-    background-size: 708px 655px;
-  }
-
-  &__top-actions {
-    margin-bottom: 250px;
-    width: 55%;
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
-
-    @include onTablet {
-      width: 67%;
-      margin-bottom: 40px;
-    }
-
-    @include onDesktop {
-      width: 55%;
-      margin-bottom: 120px;
-    }
-  }
-
-  &__menu {
-    &-page {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      padding-top: 30px;
-      height: 100vh;
-      color: $white;
-      background-color: $green;
-  
-      transform: translateX(100%);
-      transition: all 0.5s;
-  
-      &:target {
-        transform: translateX(0);
-        z-index: 1;
-        transition: all 0.5s;
-      }
-
-      @include onTablet {
-        padding-top: 45px;
-      }
-
-      &__wrapper {
-        @include onTablet {
-          display: flex;
-        }
-      }
-    }
-  
-    &__top-actions {
-      display: flex;
-      padding-bottom: 24px;
-      margin-bottom: 24px;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-
-      @include onTablet {
-        border-bottom: none;
-      }
-    }
-  
-    &__content {
-      display: flex;
-      gap: 28px;
-      font-size: 16px;
-      line-height: 100%;
-
-      @include onDesktop {
-        margin-right: 180px;
-        font-size: 22px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 100%;
-      }
-    }
-  
-    &__column {
-      width: 100px;
-      display: flex;
-      flex-direction: column;
-      gap: 24px;
-
-      @include onDesktop {
-        gap: 30px;
-      }
-    }
-  
-    &__link {
-      color: $white;
-  
-      @include hover(text-decoration, underline);
-    }
-  
-    &__schedule {
-      display: flex;
-      flex-direction: column;
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 150%;
-
-      @include onTablet {
-        flex-direction: row;
-        padding-left: 38px;
-        border-left: 1px solid rgba(255, 255, 255, 0.5);
-      }
-
-      @include onDesktop {
-        padding-left: 180px;
-      }
-
-      &-details {
-        margin-top: 16px;
-
-        @include onTablet {
-          margin-left: 38px;
-          padding-top: 25px;
-          width: 144px;
-        }
-      }
-    }
-  }
-
-  &__events-link {
-    display: none;
-
-    @include onDesktop {
-      padding-bottom: 100px;
-      display: flex;
-      width: max-content;
-      align-items: center;
-      color: #687480;
-      font-size: 14px;
-      font-weight: 700;
-      line-height: 100%;
-      text-transform: uppercase;
-      transform: rotate(-90deg);
-
-      &::before {
-        content: "";
-        display: inline-block;
-        margin-right: 20px;
-        width: 70px;
-        height: 1px;
-        background-color: #1a5a4c;
-      }
-    }
-    
-  }
-}
-
-.cross__icon {
-  display: block;
-  height: 16px;
-  width: 16px;
-  margin-right: 28px;
-  background-image: url("../images/icons/menu-button__close.svg");
-
-  @include hover(transform, rotate(90deg));
-
-  @include onDesktop {
-    margin-right: 102px;
-  }
-}
-
-.art-museum {
-
-  @include onTablet {
-    width: 340px;
-    margin: 0;
-  }
-
-  &__title {
-    margin-bottom: 20px;
-    text-align: center;
-
-    @include onTablet {
-      text-align: left;
-    }
-
-    @include onDesktop {
-      margin-bottom: 90px;
-      font-size: 72px;
-      font-weight: 700;
-      line-height: 120%;
-    }
-  }
-
-  &__button {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    width: 290px;
-    border: 1px solid $green;
-    border-right-width: 50px;
-    color: $black;
-    font-family: IBM Plex Sans, sans-serif;
-    font-weight: 500;
-    line-height: 100%;
-
-    @include onTablet {
-      height: 70px;
-      border-right-width: 70px;
-    }
-
-    @include onDesktop {
-      margin-left: 145px;
-    }
-
-    @include hover(transform, scale(105%));
-
-    &-arrow {
-      position: absolute;
-      right: -37px;
-      width: 24px;
-      height: 24px;
-      background-image: url("../images/blocks/museum/button__arrow-right.svg");
-      background-repeat: no-repeat;
-
-      @include onTablet {
-        right: -47px;
-      }
-    }
-  }
-}
-
-/*.art-museum {
-  margin-bottom: 70px;
-
-  @include onTablet {
-    padding: 0;
-    position: absolute;
-    top: 127px;
-    left: 34px;
-    width: 340px;
-  }
-
-  @include onDesktop {
-    padding: 0 55px;
-    top: 206px;
-    left: 55px;
-  }
-
-  &__title {
-    margin-bottom: 20px;
-    text-align: center;
-  }
-
-  &__button {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    width: 100%;
-    border: 1px solid $green;
-    border-right-width: 50px;
-    color: $black;
-    font-family: IBM Plex Sans, sans-serif;
-    font-weight: 500;
-    line-height: 100%;
-
-    @include onTablet {
-      height: 70px;
-      border-right-width: 70px;
-    }
-
-    @include hover(transform, scale(105%));
-
-    &-arrow {
-      position: absolute;
-      right: -37px;
-      width: 24px;
-      height: 24px;
-      background-image: url("../images/blocks/museum/button__arrow-right.svg");
-      background-repeat: no-repeat;
-
-      @include onTablet {
-        right: -47px;
-      }
-    }
-  }
-}*/
-
-.events {
-  margin: 0 auto;
-
-  &__title {
-    margin-bottom: 40px;
-    text-align: center;
-
-    @include onDesktop {
-      text-align: left;
-    }
-  }
-
-  &-card {
-    margin-bottom: 60px;
-
-    @include onDesktop {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 110px;
-    }
-
-    &__image {
-      margin: 0 auto 16px;
-      display: block;
-      width: 100%;
-
-      @include hover(transform, scale(105%));
-
-      @include onTablet {
-        margin-bottom: 44px;
-      }
-
-      @include onDesktop {
-        width: 600px;
-        margin: 0;
-      }
-    }
-
-    &__type {
-      margin-bottom: 15px;
-      color: $greyBoldText;
-      font-weight: 500;
-      line-height: 150%;
-
-      @include onTablet {
-        margin-bottom: 32px;
-      }
-    }
-
-    &__schedule {
-      color: $green;
-      font-weight: 700;
-      line-height: 150%;
-    }
-
-    &__info {
-      display: flex;
-      justify-content: space-between;
-
-      @include onTablet {
-        font-size: 14px;
-        width: 220px;
-      }
-
-      &__wrapper {
-        @include onDesktop {
-          display: flex;
-          flex-direction: column;
-        }
-      }
-    }
-
-    &__title {
-      margin-bottom: 15px;
-
-      &::after {
-        content: "";
-        background-image: url("../images/icons/rectangle__red.svg");
-        display: inline-block;
-        height: 10px;
-        width: 10px;
-        margin-left: 12px;
-        transform: translateY(-25%);
-      }
-    }
-
-    &__description {
-      font-size: 16px;
-
-      @include onTablet {
-        width: 460px;
-        line-height: 150%;
-      }
-
-      @include onDesktop {
-        width: 370px;
-      }
-    }
-
-    &__last {
-      @include onTablet {
-        margin-bottom: 112px;
-      }
-    }
-  }
-}
-
-.lections {
-  margin-bottom: 60px;
-
-  @include onTablet {
-    padding: 0 34px;
-    margin-bottom: 30px;
-  }
-  
-  @include onDesktop {
-    padding: 0;
-    margin-bottom: 100px;
-  }
-
-  &__poster {
-    height: 210px;
-    background-image: url("../images/blocks/history/img-1.png");
-
-    @include onTablet {
-      height: 390px;
-    }
-  }
-
-  &__info {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    height: 140px;
-    background-color: $white;
-    transform: translateY(-50%);
-
-    @include onTablet {
-      width: 570px;
-      height: 204px;
-    }
-
-    &-wrapper {
-      display: flex;
-      justify-content: space-between;
-      padding: 20px 21px;
-
-      @include onTablet {
-        padding: 45px 55px 23px;
-      }
-    }
-  }
-
-  &__title {
-    width: 100%;
-    padding-bottom: 20px;
-    text-align: center;
-    border-bottom: 2px solid rgba(26, 90, 76, 0.25);
-
-    @include onTablet {
-      padding-bottom: 50px;
-    }
-  }
-
-  &__type {
-    margin-bottom: 15px;
-    color: $greyBoldText;
-    font-weight: 500;
-    line-height: 150%;
-  }
-
-  &__schedule {
-    color: $green;
-    font-weight: 700;
-    line-height: 150%;
-  }
-}
-
-.gallery {
-  margin-bottom: 100px;
-
-  @include onDesktop {
-    margin-bottom: 200px;
-  }
-
-  &__title {
-    margin-bottom: 40px;
-    text-align: center;
-
-    @include onTablet {
-      margin-bottom: 48px;
-      text-align: left;
-    }
-  }
-
-  &__slider {
-    margin: 0 auto 20px;
-    width: 100%;
-    height: 450px;
-
-    @include onDesktop {
-      height: auto;
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      gap: 30px;
-    }
-  }
-
-  &__nav-buttons-box {
-    display: flex;
-    justify-content: space-between;
-    width: 102px;
-    height: 9px;
-    margin: 0 auto;
-
-    @include onDesktop {
-      display: none;
-    }
-  }
-}
-
-.main__image {
-  background-image: url("../images/blocks/gallery/img-1.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-
-  @include onTablet {
-    background-image: url("../images/blocks/gallery/img-1__wide.jpg");
-  }
-
-  @include onDesktop {
-    background-size: auto;
-  }
-}
-
-.slider-item {
-  width: 100%;
-  height: 100%;
-  object-fit: scale-down;
-
-  @include onDesktop {
-    object-fit: none;
-  }
-
-  @include hover(transform, scale(105%));
-}
-
-.hiden {
-  display: none;
-
-  @include onDesktop {
-    display: block;
-  }
-}
-
-.nav-button-item {
-  cursor: pointer;
-  height: 9px;
-  width: 9px;
-  background-image: url("../images/icons/nav-button-grey.svg");
-}
-
-.active {
-  background-image: url("../images/icons/nav-button-green.svg");
-}
-
-.subscribe {
-  padding: 88px 20px;
-  text-align: center;
-  color: $white;
-  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.8)),
-    url("../images/blocks/subscribe/background__wide.jpg");
-  background-size: cover;
-  background-position: center;
-
-  @include onDesktop {
-    height: 550px;
-  }
-
-  &__title {
-    margin-bottom: 20px;
-  }
-  
-  &__text {
-    margin-bottom: 50px;
-    font-size: 18px;
-    font-weight: 400;
-  }
-
-  &__form {
-    display: flex;
-    justify-content: center;
-  }
-
-  &__button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    background-color: #f14a27;
-
-    @include onTablet {
-      width: 70px;
-      height: 70px;
-    }
-
-    &-arrow {
-      width: 24px;
-      height: 24px;
-      background-image: url("../images/blocks/subscribe/arrow_black.svg");
-      background-repeat: no-repeat;
-    }
-  }
-}
-
-.form-field {
-  background-color: $white;
-  width: 230px;
-  height: 50px;
-
-  @include onTablet {
-    height: 70px;
-    width: 374px;
-    margin-right: 16px;
-  }
-
-  &::placeholder {
-    padding-left: 24px;
-    font-family: "Montserrat", sans-serif;
-    font-size: 14px;
-  }
-}
-
-.social {
-
-  &-links {
-    display: flex;
-    gap: 20px;
-  }
-
-  &-link {
-    width: 24px;
-    height: 24px;
-
-    @include hover(transform, scale(115%));
-  }
-}
-
-.facebook-link {
-  background-image: url("../images/socials/facebook.svg");
-}
-
-.instagram-link {
-  background-image: url("../images/socials/instagram.svg");
-}
-
-.scroll-up__link {
-  position: absolute;
-  right: 20px;
-  bottom: -50px;
-  width: 50px;
-  height: 50px;
-  background-image: url(../images/footer/scroll-up_button.svg);
-
-  @include onTablet {
-    display: none;
-  }
-
-  @include hover(transform, scale(85%));
-
-  &::after {
-    content: "";
-    display: block;
-    background-image: url("../images/footer/arrow-up.svg");
-    width: 16px;
-    height: 16px;
-    transform: translate(100%, 100%);
-  }
-}
-
-.footer {
-  padding: 50px 20px 20px;
-
-  &__top-action {
-    margin-bottom: 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    @include onTablet {
-      flex-direction: column;
-      justify-content: start;
-      gap: 62px;
-    }
-  }
-
-  &__content {
-    position: relative;
-    display: flex;
-    gap: 20px;
-    font-size: 14px;
-
-    &-wrapper {
-      margin-bottom: 40px;
-      padding-bottom: 70px;
-      border-bottom: 2px solid rgba(26, 90, 76, 0.5);
-    
-      @include onTablet {
-        margin-bottom: 64px;
-      }
-    
-    }
-  }
-
-  &__contacts {
-    width: 128px;
-
-    @include onTablet {
-      width: auto;
-    }
-
-    &-title {
-      margin-bottom: 20px;
-    }
-
-    &-item {
-      display: block;
-      color: $black;
-
-      @include hover(text-decoration, underline);
-    }
-  }
-
-  &__menu {
-    display: flex;
-  
-    @include onTablet {
-      grid-row: 2/2;
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 100%;
-    }
-  }
-}
-
-.schedule {
-  width: 130px;
-
-  @include onTablet {
-    width: auto;
-  }
-
-  &-title {
-    margin-bottom: 20px;
-  }
-
-  &-time {
-    display: block;
-  }
-}
-
-.menu {
-  font-size: 14px;
-
-  &-list {
-    display: flex;
-    gap: 20px;
-
-    @include onTablet {
-      margin-bottom: 120px;
-      gap: 110px;
-    }
-  }
-
-  &-item {
-    margin-bottom: 20px;
-  }
-
-  &-link {
-    color: $black;
-
-    @include hover(text-decoration, underline);
-  }
-
-  &-column {
-    width: 130px;
-  }
-}
-
-.rights-information {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  font-size: 12px;
-
-  @include onTablet {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    grid-row: 3/3;
-  }
-}
+@import "./blocks/container.scss";
+@import "./blocks/page.scss";
+@import "./blocks/titles.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/header.scss";
+@import "./blocks/art-museum.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lections.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
