--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -22,6 +22,7 @@
   }
 
   &__button {
+    margin: 0 auto;
     position: relative;
     display: flex;
     justify-content: center;
@@ -36,6 +37,7 @@
     line-height: 100%;
 
     @include onTablet {
+      margin: 0;
       height: 70px;
       border-right-width: 70px;
     }
