--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$tablet-min-widht: 768px;
+$desktop-min-widht: 1280px;
+$white-color: #fff;
+$title-color: #0f0e08;
+$header-title-color : #000;
+$subtitle-color: #687480;
+$subtitle-date-color: #1a5a4c;
+$description-color: #4e4e4e;
+$square-color: #f14a27;
+$durationTime: 0.3s;
