--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,24 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: Montserrat, sans-serif;
+  font-style: normal;
+  line-height: 100%;
+  font-weight: 700;
+
+  color: $h-color;
+}
+
+%h2 {
+  margin: 0;
+  font-family: Montserrat, sans-serif;
+  font-style: normal;
+  line-height: 100%;
   font-weight: 400;
+
+  color: $h-color;
+}
+
+%body {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  line-height: 100%;
 }
