--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$h-color: #0f0e08;
+$white: #fff;
+$text-color: #687480;
+$decoration-color: #1a5a4c;
+$button-color: #F14A27;
