--- a/src/styles/blocks/bottom.scss
+++ b/src/styles/blocks/bottom.scss
@@ -3,18 +3,18 @@
   display: flex;
   justify-content: center;
 
-  @include onTablet {
+  @include on-tablet {
     padding-inline: 34px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding: 0;
   }
 
   &__img {
     width: 100%;
 
-    @include onDesktop {
+    @include on-desktop {
       height: 550px;
     }
   }
@@ -26,15 +26,15 @@
     bottom: -96px;
     padding-bottom: 20px;
     background-color: $color-white;
-    box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
 
-    @include onTablet {
+    @include on-tablet {
       width: 570px;
       height: 204px;
       bottom: -135px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       bottom: -117px;
     }
   }
@@ -44,11 +44,11 @@
     justify-content: space-between;
     padding: 24px 20px;
 
-    @include onTablet {
+    @include on-tablet {
       padding: 45px 55px 23px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       padding-inline: 100px;
     }
   }
@@ -58,7 +58,7 @@
     font-size: 16px;
     font-weight: 500;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 14px;
     }
   }
@@ -68,7 +68,7 @@
     font-size: 16px;
     font-weight: 700;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 14px;
     }
   }
@@ -79,13 +79,13 @@
     font-size: 28px;
     font-weight: 400;
 
-    @include onTablet {
+    @include on-tablet {
       padding-inline: 55px;
       font-size: 36px;
       text-align: left;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       padding-inline: 100px;
     }
   }
