--- a/src/styles/blocks/btn.scss
+++ b/src/styles/blocks/btn.scss
@@ -9,7 +9,7 @@
   border: 1px solid $color-green;
   cursor: pointer;
 
-  @include onTablet {
+  @include on-tablet {
     padding: 27px 68px;
     height: 70px;
   }
