--- a/src/styles/blocks/buttons.scss
+++ b/src/styles/blocks/buttons.scss
@@ -1,13 +1,14 @@
 .buttons {
   padding-inline: 20px;
   display: flex;
+
   @include hover(transform, scale(1.1));
 
-  @include onTablet {
+  @include on-tablet {
     padding-left: 34px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding-inline: 0 30px;
     justify-self: end;
   }
