--- a/src/styles/blocks/common.scss
+++ b/src/styles/blocks/common.scss
@@ -6,10 +6,9 @@ html {
   margin: 0 auto;
   font-family: $main-family;
   color: $color-black;
-  border: 1px solid red;
   transition: transform 0.3s ease-in-out;
 
-  &:has(.menu:target) {
+  &:has(.overlay:target) {
     overflow: hidden;
   }
 }
