--- a/src/styles/blocks/dot.scss
+++ b/src/styles/blocks/dot.scss
@@ -6,8 +6,8 @@
   background-color: #bbb;
   cursor: pointer;
 
-  &.active {
-    background-color: #717171;
+  &--active {
+    background-color: $color-green;
   }
 }
 
