--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -9,12 +9,12 @@
     font-weight: 700;
     line-height: 100%;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 88px;
       font-size: 48px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-top: 200px;
     }
   }
@@ -22,11 +22,11 @@
   &__top {
     padding: 40px 20px 60px;
 
-    @include onTablet {
+    @include on-tablet {
       padding: 48px 34px 112px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       padding: 56px 55px 104px;
     }
   }
@@ -34,9 +34,10 @@
   &__top--img {
     width: 100%;
     cursor: pointer;
+
     @include hover(transform, scale(1.1));
 
-    @include onDesktop {
+    @include on-desktop {
       width: 670px;
     }
   }
@@ -44,7 +45,7 @@
   &__top--img--second {
     margin-top: 60px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 64px;
     }
   }
@@ -55,7 +56,7 @@
     align-items: center;
     justify-content: space-between;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 44px;
       justify-content: flex-start;
     }
@@ -66,7 +67,7 @@
     font-size: 16px;
     font-weight: 500;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 14px;
     }
   }
@@ -76,14 +77,14 @@
     font-size: 16px;
     font-weight: 700;
 
-    @include onTablet {
+    @include on-tablet {
       margin-left: 20px;
       font-size: 14px;
     }
   }
 
   &__info {
-    @include onDesktop {
+    @include on-desktop {
       margin-left: 130px;
     }
   }
@@ -104,7 +105,7 @@
       background-color: $color-orange;
     }
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 32px;
       font-size: 36px;
 
@@ -122,13 +123,13 @@
     font-weight: 300;
     line-height: 150%;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 15px;
     }
   }
 
   &--wrap {
-    @include onDesktop {
+    @include on-desktop {
       display: flex;
       align-items: center;
     }
