--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -14,11 +14,11 @@
     -webkit-box-shadow: 0 0 0 1000px $color-white inset;
   }
 
-  @include onTablet {
+  @include on-tablet {
     margin-top: 64px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin-top: 72px;
   }
 
@@ -32,25 +32,26 @@
     box-sizing: border-box;
     outline: none;
 
-    @include onTablet {
+    @include on-tablet {
       width: 374px;
       height: 70px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 470px;
     }
   }
 
   &__arrow {
     background-color: $color-orange;
+
     @include hover(transform, scale(1.1));
 
-    @include onTablet {
+    @include on-tablet {
       margin-left: 16px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-left: 30px;
     }
   }
