--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,7 @@
 .header {
   position: relative;
-  @include onTablet {
+
+  @include on-tablet {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
@@ -13,14 +14,14 @@
     font-size: 45px;
     line-height: 100%;
 
-    @include onTablet {
+    @include on-tablet {
       padding-left: 34px;
       padding-bottom: 38px;
       font-size: 54px;
       text-align: left;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       font-size: 72px;
       padding-inline: 55px 30px;
     }
@@ -31,11 +32,11 @@
     background-size: contain;
     background-repeat: no-repeat;
 
-    @include onTablet {
+    @include on-tablet {
       grid-column: 2/-1;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-bottom: -5px;
     }
   }
@@ -45,20 +46,20 @@
     flex-direction: column;
     align-items: center;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 107px;
       align-items: flex-start;
       grid-row: 1/2;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       display: grid;
       margin-top: 186px;
     }
   }
 
   &__aside {
-    @include onTablet {
+    @include on-tablet {
       position: relative;
     }
   }
@@ -66,13 +67,12 @@
   &__mark {
     display: none;
 
-    @include onDesktop {
-        padding-left: 55px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        align-self: end;
-        justify-self: left;
+    @include on-desktop {
+      padding-left: 55px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      place-self: flex-end flex-start;
     }
   }
 
