--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,5 +1,6 @@
 .icon {
   cursor: pointer;
+
   @include hover(transform, scale(1.1));
 
   &__logo {
@@ -8,7 +9,7 @@
 
     @include hover(transform, scale(1.1));
 
-    @include onTablet {
+    @include on-tablet {
       display: none;
     }
   }
@@ -16,16 +17,17 @@
   &__logo--tablet {
     display: none;
 
-    @include onTablet {
+    @include on-tablet {
       display: block;
       position: absolute;
       top: 15px;
       left: 85px;
       cursor: pointer;
+
       @include hover(transform, scale(1.2));
     }
 
-    @include onDesktop {
+    @include on-desktop {
       top: 24px;
     }
   }
