--- a/src/styles/blocks/line.scss
+++ b/src/styles/blocks/line.scss
@@ -4,18 +4,18 @@
   margin-top: 70px;
   background-color: $color-green;
 
-  @include onDesktop {
+  @include on-desktop {
     width: 1px;
     height: 100%;
     margin-top: 0;
   }
 
   &-wrap {
-    @include onTablet {
+    @include on-tablet {
       padding-inline: 118px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       padding-inline: 65px;
       display: flex;
       justify-content: center;
