--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,4 +1,5 @@
 .subscribe {
+  margin-top: 100px;
   padding: 88px 20px;
   color: $color-white;
   text-align: center;
@@ -7,11 +8,13 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  @include onTablet {
+  @include on-tablet {
+    margin-top: 92px;
     padding: 82px 154px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
+    margin-top: 0;
     padding: 163px 355px;
   }
 
@@ -26,7 +29,7 @@
     font-size: 36px;
     font-weight: 700;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 48px;
     }
   }
@@ -36,11 +39,11 @@
     font-size: 18px;
     line-height: 27px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 16px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       line-height: 18px;
     }
   }
