--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -4,11 +4,11 @@
   display: flex;
   align-items: center;
 
-  @include onTablet {
+  @include on-tablet {
     padding: 28px 34px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding: 39px 55px;
   }
 }
