--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @import './blocks/bottom';
 @import './blocks/gallery';
 @import './blocks/slider';
+@import './blocks/dotts';
 @import './blocks/dot';
 @import './blocks/subscribe';
 @import './blocks/form';
