--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -6,23 +6,15 @@
   right: 0;
   background-color: $color-green;
   color: $color-white;
-  opacity: 0;
-  pointer-events: none;
-  overflow-y: hidden;
-  transition: opacity 1s ease-out;
 
-  &:target {
-    opacity: 1;
-    pointer-events: all;
-  }
 
-  @include onTablet {
+  @include on-tablet {
     display: grid;
     grid-template-columns: 2fr 1fr 3fr;
     padding: 39px 34px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding: 40px 56px 48px;
   }
 
@@ -43,11 +35,11 @@
     font-size: 16px;
     font-weight: 500;
 
-    @include onTablet {
+    @include on-tablet {
       margin-left: 38px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 169px;
       gap: 30px;
       font-size: 22px;
@@ -55,9 +47,9 @@
   }
 
   &__column--second {
-    margin-left: 20px;
+    margin-left: 28px;
 
-    @include onDesktop {
+    @include on-desktop {
       margin-left: 31px;
     }
   }
@@ -71,12 +63,12 @@
   }
 
   &__line {
-    width: 280px;
+    width: 100%;
     height: 1px;
     margin-top: 24px;
     background-color: $color-white;
 
-    @include onTablet {
+    @include on-tablet {
       width: 1px;
       height: 100%;
       margin-top: 0;
@@ -86,7 +78,7 @@
   &__schedule {
     margin-top: 24px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 0;
       display: grid;
       grid-gap: 38px;
@@ -98,7 +90,7 @@
     margin-top: 20px;
     line-height: 140%;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 0;
     }
   }
@@ -126,7 +118,7 @@
     margin-top: 16px;
     line-height: 150%;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 41px;
     }
   }
@@ -136,7 +128,7 @@
   }
 
   &__line--wrap {
-    @include onTablet {
+    @include on-tablet {
       display: flex;
       justify-content: center;
     }
