--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -4,13 +4,13 @@
   gap: 20px;
   justify-content: flex-start;
 
-  @include onTablet {
+  @include on-tablet {
     margin-top: 64px;
     padding-inline: 118px;
     gap: 85px
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin-top: 0;
     padding: 0;
   }
@@ -18,6 +18,7 @@
   &--item {
     color: $color-black;
     cursor: pointer;
+
     @include hover(transform, scale(1.1));
 
     &:hover {
