--- a/src/styles/blocks/overlay.scss
+++ b/src/styles/blocks/overlay.scss
@@ -1,2 +1,18 @@
 .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  pointer-events: none;
+  overflow-y: hidden;
+  transition: opacity 1s ease-out;
+  background-color: rgba(24, 24, 26, 0.5);
+
+
+  &:target {
+    opacity: 1;
+    pointer-events: all;
+  }
 }
