--- a/src/styles/blocks/overlay.scss
+++ b/src/styles/blocks/overlay.scss
@@ -1,9 +1,6 @@
 .overlay {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   opacity: 0;
   pointer-events: none;
   overflow-y: hidden;
