--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,16 @@
 .header {
   box-sizing: border-box;
   padding-bottom: 30px;
+  max-height: 500px;
+
+  @include on-tablet {
+    max-height: 400px;
+  }
+
+  @include on-desktop {
+    max-height: none;
+    padding-bottom: 130px;
+  }
 
   &__section {
     @include on-tablet {
@@ -118,7 +128,7 @@
     &-arrow {
       width: 50px;
       height: 50px;
-      border: none;
+      text-decoration: none;
       cursor: pointer;
 
       background-color: $decoration-color;
