--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -9,6 +9,7 @@
     row-gap: 24px;
     background-color: $decoration-color;
     padding-block: 27px;
+    padding-inline: 20px;
     color: $white;
     font-size: 14px;
     font-weight: 400;
@@ -18,11 +19,13 @@
       grid-template-columns: 3fr 0fr 3fr;
       column-gap: 38px;
       padding-block: 40px;
+      padding-inline: 34px;
     }
 
     @include on-desktop {
       column-gap: 102px;
       padding-block: 48px;
+      padding-inline: 55px;
     }
   }
 
