--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -33,8 +33,13 @@
   background-size: cover;
   background-position: center;
 
+  &__link {
+    text-decoration: none;
+  }
+
   &__title {
     text-align: center;
+    text-decoration: none;
     margin: 0;
     padding-top: 8px;
     font-size: 30px;
