--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,4 +12,4 @@
 @import "blocks/gallery";
 @import "blocks/subscription";
 @import "blocks/contacts";
-@import "blocks/footer";
+@import "./blocks/footer";
