--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -30,6 +30,10 @@
       grid-row: 1 / -1;
     }
 
+    &-link {
+      text-decoration: none;
+    }
+
     &-title {
       margin: 0;
       font-size: 36px;
@@ -102,7 +106,6 @@
   &__botton {
     position: absolute;
     right: 20px;
-    bottom: -2615px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -110,6 +113,7 @@
     background-image: url(../images/icon/arrow-up.svg);
     background-position: center;
     background-repeat: no-repeat;
+    transition: 300ms;
 
     @include on-tablet {
       visibility: hidden;
