--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -13,7 +13,7 @@ p {
 }
 
 .page {
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
   scroll-behavior: smooth;
   background: $c-gray;
   transition: $transition;
