--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,5 @@
 @import "utils";
-@import "blocks/page.scss";
+@import "blocks/page";
 @import "blocks/container";
 @import "blocks/icon";
 @import "blocks/top-actions";
